--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-user root;
+user nginx;
 worker_processes auto;
 
 events {
@@ -11,7 +11,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    access_log off;
+    access_log on;
     error_log /var/log/nginx/error.log crit;
 
     sendfile on;
@@ -21,7 +21,7 @@ http {
     keepalive_requests 100;
     reset_timedout_connection on;
     client_body_timeout 10;
-    send_timeout 2;
+    send_timeout 30;
 
     open_file_cache max=1000 inactive=20s;
     open_file_cache_valid 30s;
@@ -30,7 +30,7 @@ http {
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:2m;
+    ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1h;
     ssl_buffer_size 4k;
 
@@ -59,6 +59,12 @@ http {
 
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
+        ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+        ssl_ecdh_curve secp384r1;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        resolver 8.8.8.8 8.8.4.4 valid=300s;
+        resolver_timeout 5s;
 
         client_max_body_size 100M;
         client_body_buffer_size 128k;
@@ -92,7 +98,7 @@ http {
         location /api/ {
             proxy_pass http://web:9000;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Connection "keep-alive";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -105,7 +111,7 @@ http {
         location /admin/ {
             proxy_pass http://web:9000;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Connection "keep-alive";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -118,7 +124,7 @@ http {
         location /accounts/ {
             proxy_pass http://web:9000;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Connection "keep-alive";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -131,7 +137,7 @@ http {
         location / {
             proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Connection "keep-alive";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -145,7 +151,7 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
+        add_header X-XSS-Protection "1; mode=block" always;
         location ~ /\. {
             deny all;
         }
