--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,9 @@ services:
       - dev
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - static_volume:/app/staticfiles
