--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - ./.env:/app/.env
       - static_volume:/app/staticfiles
       - media_volume:/app/media
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     env_file:
       - ./.env
     depends_on:
