--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,11 +84,8 @@ services:
     networks:
       - dev
 
-
   nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
+    image: nginx:alpine
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - static_volume:/app/staticfiles
