--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,10 +2,10 @@ load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 
 user nginx;
-worker_processes auto;
+worker_processes 4;
 
 events {
-    worker_connections 1024;  # Уменьшено количество соединений для небольшого сервера
+    worker_connections 4096;
     use epoll;
     multi_accept on;
 }
@@ -23,8 +23,8 @@ http {
     keepalive_timeout 15;
     keepalive_requests 1000;
     reset_timedout_connection on;
-    client_body_timeout 5;  # Уменьшено для лучшей производительности
-    send_timeout 10;        # Уменьшено время отправки ответа
+    client_body_timeout 5;
+    send_timeout 10;
 
     # Кэширование открытых файлов
     open_file_cache max=500 inactive=30s;
@@ -35,21 +35,27 @@ http {
     # SSL-настройки
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+    ssl_ecdh_curve secp384r1;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1h;
     ssl_buffer_size 8k;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
 
     # Настройки GZIP
     gzip on;
     gzip_vary on;
     gzip_proxied any;
-    gzip_comp_level 5;  # Уровень компрессии уменьшен для лучшего баланса
+    gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
     gzip_min_length 1000;
 
-    # Включение Brotli-сжатия
+    # Настройки Brotli
     brotli on;
-    brotli_comp_level 6;  # Оптимальный уровень сжатия
+    brotli_comp_level 6;
     brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml font/woff2;
 
     # Поддержка webp
@@ -57,6 +63,9 @@ http {
         default   "";
         "~*webp"  ".webp";
     }
+
+    # Ограничение скорости запросов
+    limit_req_zone $binary_remote_addr zone=one:10m rate=20r/s;
 
     server {
         listen 80;
@@ -71,29 +80,23 @@ http {
         # SSL-сертификаты
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
-        ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
-        ssl_ecdh_curve secp384r1;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-        resolver 8.8.8.8 8.8.4.4 valid=300s;
-        resolver_timeout 5s;
 
-        client_max_body_size 20M;  # Ограничено до 20MB
+        client_max_body_size 20M;
         client_body_buffer_size 16k;
 
         # Статические файлы
         location /static/ {
             alias /app/staticfiles/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000, immutable";
             add_header ETag $upstream_http_etag;
             access_log off;
         }
 
         location /media/ {
             alias /app/media/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
 
             location ~ \.(png|jpe?g)$ {
@@ -107,8 +110,9 @@ http {
             }
         }
 
-        # Прокси для API
+        # Прокси для API с ограничением скорости
         location /api/ {
+            limit_req zone=one burst=50 nodelay;
             proxy_pass http://web:9000;
             proxy_http_version 1.1;
             proxy_set_header Connection "keep-alive";
@@ -117,9 +121,12 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
-            proxy_set_header Accept-Encoding "gzip";  # Включение сжатия при проксировании
+            proxy_buffer_size 16k;
+            proxy_buffers 8 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_set_header Accept-Encoding "gzip";
         }
 
         # Прокси для админки
@@ -132,8 +139,11 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
+            proxy_buffer_size 16k;
+            proxy_buffers 8 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
             proxy_set_header Accept-Encoding "gzip";
         }
 
@@ -147,8 +157,11 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
+            proxy_buffer_size 16k;
+            proxy_buffers 8 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
             proxy_set_header Accept-Encoding "gzip";
         }
 
@@ -162,8 +175,11 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
+            proxy_buffer_size 16k;
+            proxy_buffers 8 16k;
+            proxy_busy_buffers_size 32k;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
             proxy_set_header Accept-Encoding "gzip";
         }
 
