--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     volumes:
       - ./backend:/app
       - ./.env:/app/.env
-      - ./backend/staticfiles:/app/staticfiles
-      - ./backend/media:/app/media
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     env_file:
       - ./.env
     depends_on:
@@ -14,8 +14,8 @@ services:
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_URL=redis://redis:6379/0
-    ports:
-      - "9000:9000"
+#    ports:
+#      - "9000:9000"
     networks:
       - dev
 
@@ -56,8 +56,8 @@ services:
     command: celery -A Gimnasium worker --loglevel=info --pool=solo
     volumes:
       - ./backend:/app
-      - ./backend/staticfiles:/app/staticfiles
-      - ./backend/media:/app/media
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     env_file:
       - ./.env
     depends_on:
@@ -72,8 +72,8 @@ services:
     command: celery -A Gimnasium beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - ./backend:/app
-      - ./backend/staticfiles:/app/staticfiles
-      - ./backend/media:/app/media
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     env_file:
       - ./.env
     depends_on:
@@ -90,8 +90,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./backend/staticfiles:/app/staticfiles
-      - ./backend/media:/app/media
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./frontend/build:/usr/share/nginx/html
     ports:
