--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -74,7 +74,6 @@ http {
 
         location /static/ {
             alias /app/staticfiles/;
-            autoindex on;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
@@ -82,7 +81,6 @@ http {
 
         location /media/ {
             alias /app/media/;
-            autoindex on;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
@@ -104,6 +102,14 @@ http {
             proxy_read_timeout 60s;
             proxy_send_timeout 60s;
             proxy_set_header Accept-Encoding "gzip";
+        }
+
+        location /admin {
+            proxy_pass http://web:9000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location / {
