--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -81,7 +81,7 @@ http {
         }
 
         location /media/ {
-            alias /root/deploy_gymnasium/backend/media/;
+            alias /app/media/;
             try_files $uri $uri/ =404;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
