--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -106,6 +106,14 @@ http {
             proxy_set_header Accept-Encoding "gzip";
         }
 
+        location /accounts/ {
+            proxy_pass http://web:9000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+}
+
         location /admin {
             proxy_pass http://web:9000;
             proxy_set_header Host $host;
