--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,7 +84,9 @@ http {
             alias /app/media/;
             try_files $uri $uri/ =404;
             expires 30d;
-            add_header Cache-Control "public, max-age=2592000, immutable";
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
             access_log off;
         }
 
