--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,10 +84,12 @@ http {
             alias /app/media/;
             try_files $uri $uri/ =404;
             expires 30d;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
+            add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
+        }
+        location /test-media/ {
+            alias /app/media/;
+            autoindex on;
         }
 
         location /api/ {
