--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,10 +2,10 @@ load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 
 user nginx;
-worker_processes 4;
+worker_processes auto;
 
 events {
-    worker_connections 4096;
+    worker_connections 8192;
     use epoll;
     multi_accept on;
 }
@@ -20,14 +20,14 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 15;
-    keepalive_requests 1000;
+    keepalive_timeout 65;
+    keepalive_requests 10000;
     reset_timedout_connection on;
-    client_body_timeout 5;
+    client_body_timeout 12;
     send_timeout 10;
 
-    open_file_cache max=500 inactive=30s;
-    open_file_cache_valid 60s;
+    open_file_cache max=1000 inactive=20s;
+    open_file_cache_valid 30s;
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
@@ -35,12 +35,12 @@ http {
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
     ssl_ecdh_curve secp384r1;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1h;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 4h;
     ssl_buffer_size 8k;
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver 1.1.1.1 8.8.8.8 valid=300s;
     resolver_timeout 5s;
 
     gzip on;
@@ -48,13 +48,13 @@ http {
     gzip_proxied any;
     gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
-    gzip_min_length 1000;
+    gzip_min_length 1024;
 
     brotli on;
     brotli_comp_level 6;
     brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml font/woff2;
 
-    limit_req_zone $binary_remote_addr zone=one:10m rate=20r/s;
+    limit_req_zone $binary_remote_addr zone=one:10m rate=30r/s;
 
     server {
         listen 80;
@@ -69,8 +69,8 @@ http {
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
-        client_max_body_size 20M;
-        client_body_buffer_size 16k;
+        client_max_body_size 100M; # Увеличен максимальный размер тела запроса
+        client_body_buffer_size 128k;
 
         location /static/ {
             alias /app/staticfiles/;
@@ -87,27 +87,23 @@ http {
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
         }
-        location /test-media/ {
-            alias /app/media/;
-            autoindex on;
-        }
 
         location /api/ {
-            limit_req zone=one burst=50 nodelay;
+            limit_req zone=one burst=100 nodelay;
             proxy_pass http://web:9000;
             proxy_http_version 1.1;
-            proxy_set_header Connection "keep-alive";
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 8 16k;
-            proxy_busy_buffers_size 32k;
-            proxy_read_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_set_header Accept-Encoding "gzip";
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_set_header Accept-Encoding "";
         }
 
         location /accounts/ {
@@ -116,7 +112,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-}
+        }
 
         location /admin {
             proxy_pass http://web:9000;
@@ -129,18 +125,18 @@ http {
         location / {
             proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
-            proxy_set_header Connection "keep-alive";
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 8 16k;
-            proxy_busy_buffers_size 32k;
-            proxy_read_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_set_header Accept-Encoding "gzip";
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_set_header Accept-Encoding "";
         }
 
         add_header X-Frame-Options "SAMEORIGIN" always;
