--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-snowfall": "^2.1.1",
+    "react-player": "^2.11.0",  // Добавлен react-player
     "sass": "^1.79.3",
     "sharp": "^0.30.7",
     "three": "^0.168.0",
