--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,16 +58,19 @@ http {
 
     server {
         listen 80;
-        server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        # server_name 3-gymnasium.kg www.3-gymnasium.kg; # Закомментировано для использования IP-адреса
+        server_name 194.163.132.44;
         return 301 https://$server_name$request_uri;
     }
 
     server {
         listen 443 ssl http2;
-        server_name 3-gymnasium.kg www.3-gymnasium.kg;
+        # server_name 3-gymnasium.kg www.3-gymnasium.kg; # Закомментировано для использования IP-адреса
+        server_name 194.163.132.44;
 
-        ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
+        # SSL сертификаты временно закомментированы, так как они привязаны к домену
+        # ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
+        # ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
         client_max_body_size 100M; # Увеличен максимальный размер тела запроса
         client_body_buffer_size 128k;
