--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,17 +31,17 @@ http {
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
-    ssl_ecdh_curve secp384r1;
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_timeout 4h;
-    ssl_buffer_size 8k;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 1.1.1.1 8.8.8.8 valid=300s;
-    resolver_timeout 5s;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers on;
+#     ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+#     ssl_ecdh_curve secp384r1;
+#     ssl_session_cache shared:SSL:50m;
+#     ssl_session_timeout 4h;
+#     ssl_buffer_size 8k;
+#     ssl_stapling on;
+#     ssl_stapling_verify on;
+#     resolver 1.1.1.1 8.8.8.8 valid=300s;
+#     resolver_timeout 5s;
 
     gzip on;
     gzip_vary on;
@@ -60,7 +60,7 @@ http {
         listen 80;
         # server_name 3-gymnasium.kg www.3-gymnasium.kg; # Закомментировано для использования IP-адреса
         server_name 137.184.123.82;
-        return 301 https://$server_name$request_uri;
+        # return 301 https://$server_name$request_uri;
     }
 
     server {
@@ -145,7 +145,7 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header X-XSS-Protection "1; mode=block" always;
 
         location ~ /\. {
